SERVER-33600 Rollback cannot set oplogTruncateAfterPoint until recoverToStableTimestamp succeeds