src/mongo/db/repl/rollback_impl.cpp
@@ -123,21 +123,6 @@ Status RollbackImpl::runRollback(OperationContext* opCtx) {
     if (!commonPointSW.isOK()) {
         return commonPointSW.getStatus();
     }
-
-    // During replication recovery, we truncate all oplog entries with timestamps greater than or
-    // equal to the oplog truncate after point. As a result, we must find the oplog entry after
-    // the common point so we do not truncate the common point itself. If we entered rollback,
-    // we are guaranteed to have at least one oplog entry after the common point.
-    Timestamp truncatePoint = _findTruncateTimestamp(opCtx, commonPointSW.getValue());
-
-    // Persist the truncate point to the 'oplogTruncateAfterPoint' document. We save this value so
-    // that the replication recovery logic knows where to truncate the oplog. Note that it must be
-    // saved *durably* in case a crash occurs after the storage engine recovers to the stable
-    // timestamp. Upon startup after such a crash, the standard replication recovery code will know
-    // where to truncate the oplog by observing the value of the 'oplogTruncateAfterPoint' document.
-    // Note that the storage engine timestamp recovery only restores the database *data* to a stable
-    // timestamp, but does not revert the oplog, which must be done as part of the rollback process.
-    _replicationProcess->getConsistencyMarkers()->setOplogTruncateAfterPoint(opCtx, truncatePoint);
     _listener->onCommonPointFound(commonPointSW.getValue().first.getTimestamp());
 
     // Increment the Rollback ID of this node. The Rollback ID is a natural number that it is
@@ -154,6 +139,26 @@ Status RollbackImpl::runRollback(OperationContext* opCtx) {
         return stableTimestampSW.getStatus();
     }
     _listener->onRecoverToStableTimestamp(stableTimestampSW.getValue());
+
+    // During replication recovery, we truncate all oplog entries with timestamps greater than or
+    // equal to the oplog truncate after point. As a result, we must find the oplog entry after
+    // the common point so we do not truncate the common point itself. If we entered rollback,
+    // we are guaranteed to have at least one oplog entry after the common point.
+    Timestamp truncatePoint = _findTruncateTimestamp(opCtx, commonPointSW.getValue());
+
+    // Persist the truncate point to the 'oplogTruncateAfterPoint' document. We save this value so
+    // that the replication recovery logic knows where to truncate the oplog. We save this value
+    // durably to match the behavior during startup recovery. This must occur after we successfully
+    // recover to a stable timestamp. If recovering to a stable timestamp fails and we still
+    // truncate the oplog then the oplog will not match the data files. If we crash at any earlier
+    // point, we will recover, find a new sync source, and restart roll back (if necessary on the
+    // new sync source). This is safe because a crash before this point would recover to a stable
+    // checkpoint anyways at or earlier than the stable timestamp.
+    //
+    // Note that storage engine timestamp recovery only restores the database *data* to a stable
+    // timestamp, but does not revert the oplog, which must be done as part of the rollback process.
+    _replicationProcess->getConsistencyMarkers()->setOplogTruncateAfterPoint(opCtx, truncatePoint);
+    _listener->onSetOplogTruncateAfterPoint(truncatePoint);
 
     // Run the oplog recovery logic.
     status = _oplogRecovery(opCtx, stableTimestampSW.getValue());
